[package]
name = "rspression"
version = "0.1.0"
authors = ["wangyinhe <wyinhe@gmail.com>"]
edition = "2024"

license = "MIT"
repository = "https://github.com/simonwater/rspression"
description = "A high-performance, lightweight expression calculation engine"
keywords = ["expression", "formula", "compiler", "virtual machine", "bytecode"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[dependencies]
thiserror = "1.0"
bitvec = "1"

[dev-dependencies]
rand = "0.9.2"
